--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.security.oauth2.client.registration.github.client-id=529d1ab232168af7709c
-spring.security.oauth2.client.registration.github.client-secret=f6c2580c854aa65b76a83704ce2ed76b75b7aeca
+spring.security.oauth2.client.registration.github.client-id=clientidhere
+spring.security.oauth2.client.registration.github.client-secret=clientsecrethere
 
 
 #spring.jpa.hibernate.ddl-auto = create-drop
